tw-scores white space no longer cover board

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -59,6 +59,9 @@ tw-scores {
 tw-scores {
   .health {
     margin-bottom: @s/2;
+    position: fixed;
+    right: 0;
+    top: 0;
     width: 6*@s;
   }
   .logs {
@@ -99,6 +102,7 @@ tw-scores .help.bot {
   position: absolute;
   right: 0;
   text-align: center;
+  width: 200px;
 }
 
 .itemBox(@size: 60px; @border: 5px) {
